# Testbed

./: .gitignore  CMakeLists.txt  README.md  accelerometer.c  accelerometer.h  lcd.c  lcd.h  main.c
